--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -2,7 +2,7 @@
 
     <div class="container-fluid product_page mx-5">
 
-        <a class="products" href="/admin/productdetail">Products Detail</a>
+        <h1>Admin Home Page</h1>
 
     </div>
 
