--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,8 +3,8 @@
         <%= type %> Login
     </h1>
 
-    <input type="text" name="" id="email">
-    <input type="text" id="password">
+    <input type="text" name="" id="email" placeholder="Enter email">
+    <input type="text" id="password" placeholder="Enter password">
     <button class="login">Login</button>
     
     <script>
