Removing Retail User data.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,16 +6,16 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <% if ( type=="retail" ) { %>
+    <% if ( type=="trade" ) { %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/retail/">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/trade/">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/retail/projects">Projects</a>
+          <a class="nav-link" href="/trade/projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/retail/products">Products</a>
+          <a class="nav-link" href="/trade/products">Products</a>
         </li>
       </ul>
       <% } %>
@@ -29,7 +29,7 @@
           </li>
         </ul>
         <% } %>
-          <% if(type==='retail' ) { %>
+          <% if(type==='trade' ) { %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
