--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,10 +20,7 @@
         if (type == 'Admin') {
             url = '/auth/admin/login'
         }
-        else if (type == 'Retail') {
-            url = '/auth/retail/login'
-        }
-        else {
+        else if (type == 'Trade'){
             url = '/auth/trade/login'
         }
         console.log('url: ', url);
