--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,19 @@
     <h1>
         <%= type %> Login
     </h1>
+    <form action="" class="createRoom">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+        </div>
 
-    <input type="text" name="" id="email">
-    <input type="text" id="password">
-    <button class="login">Login</button>
-    
+        <button type="submit" class="login">Login</button>
+    </form>
+
     <script>
     $('.login').click(function () {
         event.preventDefault();
