retail user changed to simple user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
 
   <a class="url login" href="/auth/admin/login">Admin Login</a>
   <br>
-  <a class="url login" href="/auth/trade/login">Trade Login</a>
+  <a class="url login" href="/auth/user/login">User Login</a>
   <br>
-  <a class="url signup" href="/auth/trade/signup">Sign up Trade User</a>
+  <a class="url signup" href="/auth/user/signup">Sign up User</a>
   <br>
   <a class="url products" href="/admin/products">Products Detail</a>
 
