--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,8 +28,8 @@
         if (type == 'Admin') {
             url = '/auth/admin/login'
         }
-        else if (type == 'Trade'){
-            url = '/auth/trade/login'
+        else if (type == 'User'){
+            url = '/auth/user/login'
         }
         console.log('url: ', url);
         $.ajax({
