--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,16 +6,16 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <% if ( type=="trade" ) { %>
+    <% if ( type=="user" ) { %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/trade/">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/user/">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/trade/projects">Projects</a>
+          <a class="nav-link" href="/user/projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/trade/products">Products</a>
+          <a class="nav-link" href="/user/products">Products</a>
         </li>
       </ul>
       <% } %>
@@ -29,19 +29,7 @@
           </li>
         </ul>
         <% } %>
-          <% if(type==='trade' ) { %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a href="/logout" class="dropdown-item has-icon text-danger">
-                  <i class="fas fa-sign-out-alt"></i> Logout
-                </a>
-              </div>
-            </li>
-            <% } else if(type==='trade' ) { %>
+          <% if(type==='user' ) { %>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
