--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,3 +1,3 @@
 <%- include('../partials/html_start.ejs') %>
-    <h1>Trade User Logged In</h1>
+    <h1>User Logged In</h1>
 <%- include('../partials/html_end.ejs') %>
