--- a/views/user/updateProject.ejs
+++ b/views/user/updateProject.ejs
@@ -24,7 +24,7 @@
             console.log('id: ', id);
             $.ajax({
                 type: "POST",
-                url: '/trade/updateProject',
+                url: '/user/updateProject',
                 dataType: 'json',
                 data: {
                     name: name,
