--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,17 +19,17 @@
         </li>
       </ul>
       <% } %>
-      <% if (type=="admin") { %>
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/admin/">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/products">Products</a>
-          </li>
-        </ul>
-        <% } %>
-          <% if(type==='user' ) { %>
+        <% if (type=="admin" ) { %>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/admin/">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/products">Products</a>
+            </li>
+          </ul>
+          <% } %>
+            <% if(type==='user' ) { %>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
@@ -40,6 +40,11 @@
                     <i class="fas fa-sign-out-alt"></i> Logout
                   </a>
                 </div>
+              </li>
+              <li class="nav-item cart">
+                <a class="nav-link" href="/showcart" id="navbarCartLink" aria-haspopup="true" aria-expanded="false">
+                  Cart
+                </a>
               </li>
               <% }else if(type==='admin' ){ %>
                 <li class="nav-item dropdown">
